@@ -58,7 +58,6 @@ setup(
     maintainer_email='launchpad-dev@lists.launchpad.net',
     license='Affero GPL v3',
     install_requires=[
-        'bzr',
         # XXX cjwatson 2015-11-04: This does in fact require python-apt, but
         # that's normally shipped as a system package and specifying it here
         # causes problems for Launchpad's build system.
